Fixed animation rendering, and added pause/resume and jump to turn.

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
 body {
     background: #C5E1A5;
-    color: #E4E4E4;
 }
